<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgViewBączekGłówne"
            android:layout_width="237dp"
            android:layout_height="194dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            app:srcCompat="@drawable/baczek"
            android:contentDescription="@string/baczek_tytuł" />

        <TextView
            android:id="@+id/txtViewBączekTytuł"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginStart="130dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/baczek_tytuł" />

        <TextView
            android:id="@+id/txtViewBączekOpis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginStart="20dp"
            android:text="@string/baczek_opis" />



        <ImageView
            android:id="@+id/imgViewBączekUżytkownika"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/BączekNotatka"
            android:layout_marginTop="40dp"
            android:layout_marginStart="100dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgViewBączekUżytkownika"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:text="@string/default_status" />

        <Button
            android:id="@+id/bMamGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgViewBączekUżytkownika"
            android:layout_marginTop="40dp"
            android:layout_marginStart="250dp"
            android:text="@string/button_MamGO"/>

        <EditText
            android:id="@+id/BączekNotatka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewBączekOpis"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:ems="100"
            android:inputType="text"
            android:text="@string/hint" />

    </RelativeLayout>
</ScrollView>