<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgViewBerniklaKanadyjskaGłówne"
            android:layout_width="237dp"
            android:layout_height="194dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            app:srcCompat="@drawable/bernikla_kanadyjska"
            android:contentDescription="@string/bernikla_kanadyjska_tytuł" />

        <TextView
            android:id="@+id/txtViewBerniklaKanadyjskaTytuł"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginStart="130dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/bernikla_kanadyjska_tytuł" />

        <TextView
            android:id="@+id/txtViewBerniklaKanadyjskaOpis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginStart="20dp"
            android:text="@string/bernikla_kanadyjska_opis" />



        <ImageView
            android:id="@+id/imgViewBerniklaKanadyjskaUżytkownika"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/BerniklaKanadyjskaNotatka"
            android:layout_marginTop="40dp"
            android:layout_marginStart="100dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgViewBerniklaKanadyjskaUżytkownika"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:text="@string/default_status" />

        <Button
            android:id="@+id/bMamGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgViewBerniklaKanadyjskaUżytkownika"
            android:layout_marginTop="40dp"
            android:layout_marginStart="250dp"
            android:text="@string/button_MamGO"/>

        <EditText
            android:id="@+id/BerniklaKanadyjskaNotatka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewBerniklaKanadyjskaOpis"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:ems="100"
            android:inputType="text"
            android:text="@string/hint" />

    </RelativeLayout>
</ScrollView>